makng it more readable with comments

--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Metadata -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Lato:wght@300;400&display=swap" rel="stylesheet">
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="style.css">
-    <title>BeastPhotographyPortfolio</title>
+
+    <!-- Page title -->
+    <title>Beast Photography Portfolio</title>
 </head>
 <body>
-  <html>
-
-  <head>
-    <title>Photography</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-
-  <body>
-    <header>
+    <header> <!--Header with logo and navigation -->
       <nav class="container">
         <img src="images/logo for portfolio.png" alt="logo">
         <ul class="container-ul">
@@ -32,44 +30,45 @@
     </header>
     <main>
       <section class="hero" id="mission">
+       
         <div>
           <h2>Our Mission</h2>
           <h4>to provide an <span>enjoyable</span> experience in front of the camera as well as timeless photographs that you will treasure for a <span>lifetime</span></h4>
         </div>
 
       </section>
-      <section class="featured" id="featured">
-        <h2>Photos of the month </h2>
-        <ul>
-          <li>
-            <img src="images/AAA_7749-2.jpg" alt="portrait">
-            <h4>The eyes shout what the lips fear to say.</h4>
+      <section class="featured" id="featured"> <!-- section with featured photos -->
+        <h2>Photos of the month </h2> <!-- title of the section -->
+        <ul> <!-- unordered list of photos -->
+          <li> <!-- first photo -->
+            <img src="images/AAA_7749-2.jpg" alt="portrait"> <!-- source of the photo -->
+            <h4>The eyes shout what the lips fear to say.</h4> <!-- caption of the photo -->
           </li>
-          <li>
-            <img src="images/AAA_7741.jpg" alt="portrait under sheets">
-            <h4>A reader lives a thousand lives before he dies . . . </h4>
+          <li> <!-- second photo -->
+            <img src="images/AAA_7741.jpg" alt="portrait under sheets"> <!-- source of the photo -->
+            <h4>A reader lives a thousand lives before he dies . . . </h4> <!-- caption of the photo -->
           </li>
-          <li>
-            <img src="images/DSC_0115.jpg" alt="poland">
-            <h4>St. Mary’s Basilica</h4>
+          <li> <!-- third photo -->
+            <img src="images/DSC_0115.jpg" alt="poland"> <!-- source of the photo -->
+            <h4>St. Mary’s Basilica</h4> <!-- caption of the photo -->
           </li>
-          <li>
-            <img src="images/DSC_0049.jpg" alt="portrait">
-            <h4>A portrait is not made in the camera but on either side of it.</h4>
+          <li> <!-- fourth photo -->
+            <img src="images/DSC_0049.jpg" alt="portrait"> <!-- source of the photo -->
+            <h4>A portrait is not made in the camera but on either side of it.</h4> <!-- caption of the photo -->
           </li>
-          <li>
-            <img src="images/valia teliko.jpg" alt="photoshop portrait">
-            <h4>We all have magic inside us.</h4>
+          <li> <!-- fifth photo -->
+            <img src="images/valia teliko.jpg" alt="photoshop portrait"> <!-- source of the photo -->
+            <h4>We all have magic inside us.</h4> <!-- caption of the photo -->
           </li>
         </ul>
       </section>
       <section class="about_me" id="about_me">
         <h2>About me</h2>
         <div class="info">
-                    <h4>Hi, I'm Tasos</h4>
-                    <p>I am a <span>photographer</span> based in Athens, Greece. I have been taking photos for 3 years now and I am very passionate about it. I love capturing the <span>beauty of the world and the people around me.</span></p>
-                </div>
-        </section>
+            <h4>Hi, I'm Tasos</h4>
+            <p>I am a <span>photographer</span> based in Athens, Greece. I have been taking photos for 3 years now and I am very passionate about it. I love capturing the <span>beauty of the world and the people around me.</span></p>
+        </div>
+      </section>
     </main>
     <footer>
         <h2>The Beast Photography</h2>
